--- a/index.html
+++ b/index.html
@@ -209,8 +209,7 @@
                         <span class="font-medium">Facebook Group</span>
                         <i class="fas fa-external-link-alt ml-auto text-xs text-slate-500"></i>
                     </a>
-                    <a href="https://www.facebook.com/profile.php?id=6158ChatGPT | Midjourney:
-6281245735" target="_blank" class="flex items-center gap-3 text-white hover:text-yellow-500 transition">
+                    <a href="https://www.facebook.com/profile.php?id=61586281245735" target="_blank" class="flex items-center gap-3 text-white hover:text-yellow-500 transition">
                         <i class="fab fa-facebook-f text-xl text-blue-600"></i>
                         <span class="font-medium">Facebook Page</span>
                         <i class="fas fa-external-link-alt ml-auto text-xs text-slate-500"></i>
